# esp-ota

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig
bootloader_components/main/: CMakeLists.txt  bootloader_params.h  bootloader_start.c
components/bootloader/subproject/main/: bootloader_start.c
main/: CMakeLists.txt  bootloader_params.h  collapsehtml.py  dhcp-options.h  esp-ota.cpp  index.html  resizepartitions.py
